[gd_scene load_steps=4 format=3 uid="uid://c68jr2bb7iw52"]

[ext_resource type="Script" path="res://gui/downloads.gd" id="1_ax6aa"]
[ext_resource type="PackedScene" uid="uid://cry77k2w36640" path="res://gui/torrent_list.tscn" id="2_n8en7"]
[ext_resource type="PackedScene" uid="uid://c6y16hfwvh6x7" path="res://gui/uri_box.tscn" id="3_qh8b8"]

[node name="Downloads" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ax6aa")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TorrentList" parent="VSplitContainer/VBoxContainer" instance=ExtResource("2_n8en7")]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonBar" type="HBoxContainer" parent="VSplitContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="AddTorrent" type="Button" parent="VSplitContainer/VBoxContainer/ButtonBar"]
layout_mode = 2
text = "Add Torrent"

[node name="AddMenu" type="HBoxContainer" parent="VSplitContainer"]
visible = false
layout_mode = 2

[node name="FileURI" type="Button" parent="VSplitContainer/AddMenu"]
layout_mode = 2
text = "URI from file"

[node name="URIs" type="VBoxContainer" parent="VSplitContainer/AddMenu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="URIBox" parent="VSplitContainer/AddMenu/URIs" instance=ExtResource("3_qh8b8")]
layout_mode = 2

[node name="Add" type="Button" parent="VSplitContainer/AddMenu"]
layout_mode = 2
text = "Add"

[connection signal="pressed" from="VSplitContainer/VBoxContainer/ButtonBar/AddTorrent" to="." method="_on_add_torrent_pressed"]
[connection signal="pressed" from="VSplitContainer/AddMenu/FileURI" to="." method="_on_file_uri_pressed"]
[connection signal="child_exiting_tree" from="VSplitContainer/AddMenu/URIs" to="." method="_on_uris_child_exiting_tree"]
[connection signal="pressed" from="VSplitContainer/AddMenu/Add" to="." method="_on_add_pressed"]
